Fix SideBar overflow for overriding to long program name

--- a/src/mainMenu.styl
+++ b/src/mainMenu.styl
@@ -4,7 +4,6 @@
 	display flex
 	flex-direction column
 	justify-content center
-	overflow hidden
 	color hsl(hue(sidebar-bg), 15%, 35%)
 	background hsl(hue(logo-light-blue), 35%, 94%)
 	border-left 2px solid sidebar-borders
@@ -17,7 +16,6 @@
 		display flex
 		flex-direction column
 		min-height 650px
-		overflow-y auto
 
 		> #user
 			height 30%
@@ -77,7 +75,7 @@
 						@media screen and (max-width: 745px)
 							text-align center
 							font-size x-large
-							
+
 							.menuItemText
 								display none
 
